= Changelog
:toc: macro
ifdef::env-github[]
:toc-title:
:tip-caption: :bulb:
:note-caption: :bulb:
:important-caption: :heavy_exclamation_mark:
:caution-caption: :fire:
:warning-caption: :warning:
endif::[]

ifdef::env-github[]
[discrete]
== Contents
endif::[]
toc::[]

:link-proxy-from-env: https://golang.org/pkg/net/http/#ProxyFromEnvironment

== HEAD

== v2.4.6 - 2023-10-25
*   Add `--no-debug-vars` flag to disable /debug/vars when `--metrics` is
    enabled. (#66, #67)

== v2.4.5 - 2023-10-23
*   fix htrie matching of non punycode (eg. unicode) idna hostnames
*   slightly faster logging (update to mlog dependency)
*   address a logging issue with missing url path output in
    `"built outgoing request"` debug log
*   moderate improve performance of hostname rule processing
    (approx 12-30% in microbenchmarks)
*   slight improvement in request path url processing
    (approx 2-4% in microbenchmarks)
*   fix /debug/vars being enabled by default (#65) due to expvars import
    side effect

== v2.4.4 - 2023-07-25
*   update dependencies
*   bump version in go.mod (and fix all internal module references) +
    ref: discussion link:https://github.com/cactus/go-camo/discussions/62[#62]

== v2.4.3 - 2023-02-18
*   update library dependency golang.org/x/net. +
    refs:
    link:https://github.com/cactus/go-camo/security/dependabot/3[dependabot-3],
    link:https://github.com/cactus/go-camo/security/dependabot/4[dependabot-4]

== v2.4.2 - 2023-02-16
*   update library dependency prometheus, covering CVE-2022-21698. +
    Note that for go-camo, the issue in the prometheus library was exploitable
    only when the metrics option/flag (--metrics) is enabled.
*   build with go1.19.5

== v2.4.1 - 2022-09-28
*   Rebuild release with go-1.19.1

== v2.4.0 - 2022-01-30
*   Add support for internal address proxies (HTTP(S)_PROXY). +
    issue #55
*   Add some additional documentation/caveats regarding HTTP(S)_PROXY usage.

== v2.3.0 - 2021-10-20